--- a/app/views/conceptospersonales/index.html.erb
+++ b/app/views/conceptospersonales/index.html.erb
@@ -3,76 +3,6 @@
 
     <h1>Conceptos Personales</h1>
 </div>
-<div class="panel panel-success">
-    <div class="panel-heading">
-        Asignaciones
-    </div>
-    <%if Conceptopersonal.all.where(tipo_de_concepto:0).length>0%>
-    <div class="panel-body">
-        <div class="table-responsive text-center">
-            <table class="table table-bordered table-condensed table-responsive table-bordered">
-                <thead>
-                    <tr>
-                        <th class="actions">Nombre</th>
-                        <th class="actions" style="width: 100px;">Acciones</th>
-                    </tr>
-                </thead>
 
-                <tbody>
-                    <%
-          asignaciones=@conceptospersonales.where(tipo_de_concepto: 0).order("created_at")
-          asignaciones.each do |conceptopersonal| %>
-                    <tr>
-                        <td><%= conceptopersonal.nombre %></td>
-                        <td>
-                            <%= render 'layouts/actions', x: Conceptopersonal, y: edit_concepto_path(conceptopersonal), z: conceptopersonal %>
-
-                        </td>
-                    </tr>
-                    <% end %>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <%else%>
-    <div class="actions">
-        <h4>"No hay asignaciones disponibles"</h4>
-    </div>
-    <%end%>
-</div>
-<div class="panel panel-danger">
-    <div class="panel-heading">
-        Deducciones
-    </div>
-    <%if Conceptopersonal.all.where(tipo_de_concepto:1).length>0%>
-    <div class="panel-body">
-        <div class="table-responsive text-center">
-            <table class="table table-bordered table-condensed table-responsive table-bordered">
-                <thead>
-                    <tr>
-                        <th class="actions">Nombre</th>
-                        <th class="actions">Acciones</th>
-                    </tr>
-                </thead>
-
-                <tbody>
-                    <%
-  deducciones=@conceptospersonales.where(tipo_de_concepto: 1).order("created_at")
-            deducciones.each do |conceptopersonal| %>
-                    <tr>
-                        <td><%= conceptopersonal.nombre %></td>
-                        <td class='actions'>
-                            <%= render 'layouts/actions', x: Conceptopersonal, y: edit_concepto_path(conceptopersonal), z: conceptopersonal %>
-                        </td>
-                    </tr>
-                    <% end %>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <%else%>
-    <div class="actions">
-        <h4>"No hay asignaciones disponibles"</h4>
-    </div>
-    <%end%>
-</div>
+<%=render "conceptopersonal", x: 0,y: "Asignaciones", z: "success"%>
+<%=render "conceptopersonal", x: 1,y: "Deducciones", z: "danger"%>
