--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -8,9 +8,9 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" style="padding-top:1px;
+      <a class="navbar-brand" style="padding-top: 1px;
 padding-left:1px;
-      " href="/"><h3><img src="/assets/brand.png" alt="" />FUNSONE nominas</h3></a>
+      " href="/"><h3><img src="/assets/brand.png" alt="" />FUNSONE nomina</h3></a>
 
     </div>
     <div style="color: white;
@@ -150,7 +150,7 @@ padding-left:1px;
                 <dd>Monica Huamani</dd>
               </dl>
 
-            
+
 
 
 </div>
