--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -167,14 +167,14 @@
 
 <div class="col-sm-8">
 <ul class="list-group">
-<li class="list-group-item text-muted" contenteditable="false"><%= 'Reporte '+$dic['modalidad_de_pago'].key($quincena)+' ('+$ahora.month.to_s+'/'+$ahora.year.to_s+')'%></li>
+<li class="list-group-item text-muted" contenteditable="false"><%= 'Reporte Quincena Actual ('+$ahora.month.to_s+'/'+$ahora.year.to_s+')'%></li>
 <li class="list-group-item">
   <table class="table table-hover table-condensed">
     <thead>
       <tr>
         <th>CONCEPTO</th>
-        <th>ASIGNACION</th>
-        <th>DEDUCCION</th>
+        <th>ASIGNACIÓN</th>
+        <th>DEDUCCIÓN</th>
         <th>TOTAL</th>
       </tr>
     </thead>
