--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -57,9 +57,6 @@
     %>
       <li><%= link_to 'Suspender', cambiarestado_persona_path(@persona, estado: 3), method: :post, data: { confirm: 'Esta seguro?' } %></li>
       <li><%= link_to 'Retirar',  cambiarestado_persona_path(@persona, estado: 0), method: :post, data: { confirm: 'Esta seguro?' } %></li>
-      <% when 'retirado'%>
-
-      <li><%= link_to 'Reingresar',  cambiarestado_persona_path(@persona, estado: 2), method: :post, data: { confirm: 'Esta seguro?' } %></li>
       <% when 'suspendido'%>
       <li><%= link_to 'Reactivar',  cambiarestado_persona_path(@persona, estado: 1), method: :post, data: { confirm: 'Esta seguro?' } %></li>
       <%end%>
@@ -93,12 +90,12 @@
     <span class="pull-left">
       <strong class="">Sueldo Normal</strong>
     </span>
-    <%= @persona.cargo.sueldos.last.monto%></li>
+    <%= tr(@persona.cargo.sueldos.last.monto)%></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
       <strong class="">Sueldo Integral</strong>
     </span>
-    <%= @persona.cargo.sueldos.last.sueldo_integral%></li>
+    <%=tr(@persona.cargo.sueldos.last.sueldo_integral)%></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
       <strong class="">Cédula</strong>
@@ -160,7 +157,7 @@
   <span class="pull-left">
     <strong class="">Sueldo Externo</strong>
   </span>
-  <%= @persona.contrato.sueldo_externo%></li>
+  <%= tr(@persona.contrato.sueldo_externo)%></li>
 <%end%>
 </ul>
 </div>
@@ -182,7 +179,7 @@
       <% @persona.asignaciones.each do |c| %>
       <tr>
         <td><%= c['nombre'].upcase%></td>
-        <td><%=c['valor']%></td>
+        <td><%=tr(c['valor'])%></td>
         <td></td>
         <td></td>
       </tr>
@@ -193,7 +190,7 @@
       <tr>
         <td><%= c['nombre'].upcase%></td>
         <td></td>
-        <td><%=c['valor']%></td>
+        <td><%=tr(c['valor'])%></td>
         <td></td>
       </tr>
       <% end %>
@@ -201,11 +198,11 @@
       <tr>
         <th></th>
         <th><%=
-            truncar(@persona.total_asignaciones)%></th>
+            tr(@persona.total_asignaciones)%></th>
         <th><%=
-              (@persona.total_deducciones)
+            tr(@persona.total_deducciones)
             %></th>
-        <th><%= truncar(@persona.total).to_s+"  BsF." %></th>
+        <th><%= tr(@persona.total)+"  BsF." %></th>
       </tr>
     </tbody>
   </table>
