--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -153,16 +153,16 @@ Generar</button>
 <td><%= tipo.nombre %></td>
 <td class="actions">
 <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
-<%= link_to ' Recibos', tipo_path(tipo,format: "pdf")+"?doc=0&cp=&c=",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar recibos de pago de la nómina" %>
-<%= link_to '', tipo_path(tipo,format: "pdf")+"?doc=1&cp=&c=",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica (ahorro de tinta)" %>
+<%= link_to ' Recibos', tipo_path(tipo,format: "pdf")+"?doc=0&cp=&c=","target": "_blank",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar recibos de pago" %>
+<%= link_to '', tipo_path(tipo,format: "pdf")+"?doc=1&cp=&c=","target": "_blank",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica (ahorro de tinta)" %>
 </div>
 <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
-<%= link_to ' Bancario', tipo_path(tipo,format: "pdf")+"?doc=2&cp=&c=",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte bancario" %>
-<%= link_to '', tipo_path(tipo,format: "pdf")+"?doc=3&cp=&c=",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica (ahorro de tinta)" %>
+<%= link_to ' Bancario', tipo_path(tipo,format: "pdf")+"?doc=2&cp=&c=","target": "_blank",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte bancario" %>
+<%= link_to '', tipo_path(tipo,format: "pdf")+"?doc=3&cp=&c=","target": "_blank",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica (ahorro de tinta)" %>
 </div>
 <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
-<%= link_to ' Conceptos', tipo_path(tipo,format: "pdf")+"?doc=4&cp=&c=",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte de conceptos de la nómina" %>
-<%= link_to '', tipo_path(tipo,format: "pdf")+"?doc=5&cp=&c=",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica (ahorro de tinta)" %>
+<%= link_to ' Conceptos', tipo_path(tipo,format: "pdf")+"?doc=4&cp=&c=","target": "_blank",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte de conceptos" %>
+<%= link_to '', tipo_path(tipo,format: "pdf")+"?doc=5&cp=&c=","target": "_blank",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica (ahorro de tinta)" %>
 </div>
 
 </td>
