--- a/app/views/cargos/_cargo.html.erb
+++ b/app/views/cargos/_cargo.html.erb
@@ -7,9 +7,9 @@
         <tr>
           <th class="actions">Nombre</th>
           <th class="actions">Departamento</th>
-          <th class="actions">Sueldo Basico</th>
+          <th class="actions">Sueldo Básico</th>
           <th class="actions">Sueldo Integral</th>
-          <th class="actions">Tipo</th>
+          <th class="actions">Nómina</th>
           <th class="actions">Disponible</th>
           <th class="actions" style="width: 100px;">Acciones</th>
         </tr>
