--- a/app/views/cargos/show.html.erb
+++ b/app/views/cargos/show.html.erb
@@ -24,7 +24,7 @@
       <table class="table table-hover table-responsive table-condensed table-bordered">
         <thead>
           <tr>
-            <th class="actions">Sueldo Normal</th>
+            <th class="actions">Sueldo Base</th>
             <th class="actions">Sueldo Integral</th>
             <th class="actions">Fecha de vigencia</th>
             <th class="actions" style="width:20px">Activo</th>
