--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -1,44 +1,45 @@
 <div class="page-header">
 
-    <%= render 'layouts/nuevo', msg: "Nueva Nómina", path: new_tipo_path, x: Tipo %>
-    <button class="btn btn-default pull-right" style="margin-right:1%; height:111%;" type="button" data-toggle="modal" data-target="#myModal">
-        <i class="fa fa-file-pdf-o"> Reportes</i>
-    </button>
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" style="margin-top:60px;" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">
-                        <i class="fa fa-file-pdf-o fa-2x"></i>
-                        Generador de Reportes</h4>
-                </div>
-                <div class="modal-body ">
-                    <div class="col-xs-12 form-group">
-                        <%= label_tag "Nomina " %>
-                        <div class="form-group input-group">
-                            <span class="input-group-addon">
-                                <span class="fa fa-bars fa-fw"></span>
-                            </span>
+  <%= render 'layouts/nuevo', msg: "Nueva Nómina", path: new_tipo_path, x: Tipo %>
+  <button class="btn btn-default pull-right" style="margin-right:1%; height:111%;" type="button" data-toggle="modal" data-target="#myModal">
+    <i class="fa fa-file-pdf-o">
+      Reportes</i>
+  </button>
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" style="margin-top:60px;" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title" id="myModalLabel">
+            <i class="fa fa-file-pdf-o fa-2x"></i>
+            Generador de Reportes</h4>
+        </div>
+        <div class="modal-body">
+          <div class="col-xs-12 form-group">
+            <%= label_tag "Nómina " %>
+            <div class="form-group input-group">
+              <span class="input-group-addon">
+                <span class="fa fa-bars fa-fw"></span>
+              </span>
 
-                            <%= select_tag("Tipo",options_for_select(Tipo.all.map{|s|[s.nombre, s.id]}),{include_blank:'Seleccione una Nomina...',class: "btn btn-default dropdown-toggle" }) %>
+              <%= select_tag("Tipo",options_for_select(Tipo.all.map{|s|[s.nombre, s.id]}),{include_blank:'Seleccione una nómina...',class: "form-control" }) %>
 
-                        </div>
-                    </div>
+            </div>
+          </div>
 
-                    <div class="col-xs-12 form-group">
-                        <%= label_tag "Quincena" %>
-                        <div class="form-group input-group">
-                            <span class="input-group-addon">
-                                <span class="fa fa-calendar fa-fw"></span>
-                            </span>
+          <div class="col-xs-12 form-group">
+            <%= label_tag "Quincena" %>
+            <div class="form-group input-group">
+              <span class="input-group-addon">
+                <span class="fa fa-calendar fa-fw"></span>
+              </span>
 
-                            <select class="btn btn-default dropdown-toggle" id="quincena">
-                                <option value="">Seleccione la quincena...</option>
-<%
+              <select class="form-control" id="quincena">
+                <option value="">Seleccione la quincena...</option>
+                <%
 sueldo=Sueldo.first.created_at if Sueldo.all.length>0
 sueldo = Date.today - 1.day if !sueldo
 
@@ -47,14 +48,14 @@ i=1
 while sueldo<$ahora
 
 %>
-<%
+                <%
 
 quincena = (sueldo.day <= 15) ? 0 : 1
 dia= (quincena) ? 17 : 11
 fecha="#{dia}-#{sueldo.month}-#{sueldo.year}"
 %>
-<%=raw("<option value=\"#{fecha}\"> #{$dic['quincena'].key(quincena)} #{$dic['meses'].key(sueldo.month)} del #{sueldo.year}</option>")%>
-<%
+                <%=raw("<option value=\"#{fecha}\"> #{$dic['quincena'].key(quincena)} #{$dic['meses'].key(sueldo.month)} del #{sueldo.year}</option>")%>
+              <%
 if quincena==0
   sueldo= Date.strptime("16-#{sueldo.mon}-#{sueldo.year}", '%d-%m-%Y')
 else
@@ -65,39 +66,50 @@ else
 end
 end
 %>
-<%end%>
+                <%end%>
 
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 form-group">
-                        <%= label_tag "Tipo de reporte" %>
-                        <div class="form-group input-group">
-                            <span class="input-group-addon">
-                                <span class="fa fa-file fa-fw"></span>
-                            </span>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-12 form-group">
+            <%= label_tag "Tipo de reporte" %>
+            <div class="form-group input-group">
+              <span class="input-group-addon">
+                <span class="fa fa-file fa-fw"></span>
+              </span>
 
-                            <%= select_tag("tipo_de_reporte",options_for_select($dic["tipos_de_reporte"]),{include_blank:'Seleccione un Tipo de Reporte ...',class: "btn btn-default dropdown-toggle" }) %>
+              <%= select_tag("tipo_de_reporte",options_for_select($dic["tipos_de_reporte"]),{include_blank:'Seleccione un tipo de Reporte ...',class: "form-control" }) %>
 
-                        </div>
-                    </div>
-                    <div class="col-xs-12 form-group">
-                        <%= label_tag "Conceptos" %>
-                        <div class="form-group input-group">
-                            <span class="input-group-addon">
-                                <span class="fa fa-money fa-fw"></span>
-                            </span>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="col-xs-6 form-group">
+            <%= label_tag "Conceptos Globales" %>
+            <div class="form-group input-group">
+              <span class="input-group-addon">
+                <span class="fa fa-money fa-fw"></span>
+              </span>
 
-                            <%= select_tag("Concepto",options_for_select(Concepto.all.map{|s|[s.nombre, s.id]}.prepend([t('Ninguno'), 0])),{include_blank:'Todos (Excepto extras)',class: "btn btn-default dropdown-toggle" }) %>
+              <%= select_tag("Concepto",options_for_select(Concepto.all.map{|s|[s.nombre, s.id]}.prepend([t('Ninguno'), 0])),{include_blank:'Todos (Excepto extras)',class: "form-control" }) %>
 
-                            <%= select_tag("Conceptopersonal",options_for_select(Conceptopersonal.all.map{|s|[s.nombre, s.id]}.prepend([t('Ninguno'), 0])),{include_blank:'Todos (Excepto extras)',class: "btn btn-default dropdown-toggle" }) %>
+            </div>
+          </div>
+          <div class="col-xs-6 form-group">
+            <%= label_tag "Conceptos Personales" %>
+            <div class="form-group input-group">
+              <span class="input-group-addon">
+                <span class="fa fa-money fa-fw"></span>
+              </span>
 
-                        </div>
-                    </div>
-                </br>
-            </br>
+              <%= select_tag("Conceptopersonal",options_for_select(Conceptopersonal.all.map{|s|[s.nombre, s.id]}.prepend([t('Ninguno'), 0])),{include_blank:'Todos (Excepto extras)',class: "form-control" }) %>
+
+            </div>
+          </div>
+        </div>
         </br>
+      </br>
     </br>
+  </br>
 </br>
 </br>
 </br>
@@ -186,42 +198,41 @@ Generar</button>
 
 function generar(eco) {
 
-    if ($('#Tipo').val() == '') {
-        alert('Seleccione una opcion en el campo nomina.');
-        return;
-    }
-    if ($('#tipo_de_reporte').val() == '') {
-        alert('Seleccione una opcion en el campo tipo de reporte.');
-        return;
-    }
-    if ($('#Concepto').val() === "0" && $('#Conceptopersonal').val() === "0") {
-        alert('Seleccione al menos una clase de concepto.');
-        return;
-    }
-    var concepto = "&c=" + $('#Concepto').val();
+  if ($('#Tipo').val() == '') {
+    alert('Seleccione una opcion en el campo nomina.');
+    return;
+  }
+  if ($('#tipo_de_reporte').val() == '') {
+    alert('Seleccione una opcion en el campo tipo de reporte.');
+    return;
+  }
+  if ($('#Concepto').val() === "0" && $('#Conceptopersonal').val() === "0") {
+    alert('Seleccione al menos una clase de concepto.');
+    return;
+  }
+  var concepto = "&c=" + $('#Concepto').val();
 
-    var conceptopersonal = "&cp=" + $('#Conceptopersonal').val();
+  var conceptopersonal = "&cp=" + $('#Conceptopersonal').val();
 
-
-    var params = '?doc=' + (parseInt($('#tipo_de_reporte').val()) + eco) + conceptopersonal + concepto + '&ahora=' + $('#quincena').val();
-    var win = window.open('<%=tipos_path%>/' + $('#Tipo').val() + '.pdf' + params, '_blank');
-    if (win) {
-        //Browser has allowed it to be opened
-        win.focus();
-    } else {
-        //Broswer has blocked it
-        alert('Please allow popups for this site');
-    }
+  var params = '?doc=' + (parseInt($('#tipo_de_reporte').val()) + eco) + conceptopersonal + concepto + '&ahora=' + $('#quincena').val();
+  var win = window.open('<%=tipos_path%>/' + $('#Tipo').val() + '.pdf' + params, '_blank');
+  if (win) {
+    //Browser has allowed it to be opened
+    win.focus();
+  } else {
+    //Broswer has blocked it
+    alert('Please allow popups for this site');
+  }
 }
 
 $(function () {
-    $('[data-toggle="tooltip"]').tooltip();
-    $('#generar_boton').click(function () {
-        generar(0);
-    });
-    $('#generar_boton_eco').click(function () {
-        generar(1);
-    });
+  $('[data-toggle="tooltip"]').tooltip();
+  $('#generar_boton').click(function () {
+    generar(0);
+  });
+  $('#generar_boton_eco').click(function () {
+    generar(1);
+  });
 });
 </script>
 <%else%>
