--- a/app/views/cargos/index.html.erb
+++ b/app/views/cargos/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 <ul class="list-group">
 
-  <li class="list-group-item text-muted" contenteditable="false">Busqueda</li>
+  <li class="list-group-item text-muted" contenteditable="false">Búsqueda</li>
   <li class="list-group-item ">
 
     <div class="input-group">
