--- a/app/views/conceptos/_concepto.html.erb
+++ b/app/views/conceptos/_concepto.html.erb
@@ -9,8 +9,8 @@
       <thead>
         <tr>
           <th class= "actions">Nombre</th>
-          <th class= "actions">Formula</th>
-          <th class= "actions">Formula Patrono</th>
+          <th class= "actions">Fórmula</th>
+          <th class= "actions">Fórmula Patrono</th>
           <th class= "actions">Modalidad de pago</th>
           <th class= "actions" style= "width: 100px;">Acciones</th>
         </tr>
