--- a/app/views/personas/_personas.html.erb
+++ b/app/views/personas/_personas.html.erb
@@ -5,7 +5,7 @@
   <table class="table table-hover table-condensed table-striped" style="font-size:	11px;">
     <thead>
       <tr>
-        <th class= "actions">Cédula</th>
+        <th class= "actions" style="width: 120px;">Cédula</th>
         <th class= "actions">Nombres Completo</th>
         <th class= "actions">Cargo</th>
         <th class= "actions">Departamento</th>
